styles/components/_consultationform.scss
//––
// CONSULTATION FORM
//––––––––––––––––––––––––––––––
.consultation-form {
	background-color: $offblack;
	margin-bottom: 40px;
	display: block;

	.copy {
		font-size: 1.8rem;
		color: $white;
		padding: 30px 10px 0 10px;
		text-align: center;
		font-weight: 600;
		position: relative;

		.number {
			color: $green;
			font-size: 2.4rem;
		}

		.or {
			padding: 5px;
			border-radius: 100px;
			color: $darkgray;
			background-color: $gray;
			margin: 0 8px;
			font-weight: bold;
		}

		.form-cross {
			position: absolute;
			right: 0;
			top: 0;
			display: block;
			width: 25px;
			background-color: $gray;
			padding: 8px;
			cursor: pointer;
		}
	}

	.bar {
		color: $gray;
		text-align: center;
		font-size: 1.8rem;
		padding: 15px 5px;
		border-bottom: 2px solid $gray;
		cursor: pointer;

		.icon {
			width: 20px;
			margin-left: 8px;
			vertical-align: middle;
		}
	}

	.copy-mobile .or {
		position: relative;
		z-index: 6;
		border:8px solid $offblack;

		&::before {
			content:'';
			position: absolute;
			top: 50%;
			left: 50%;
			transform: translate(-50%, -50%);
			width: 200px;
			background-color: $gray;
			z-index: -1;
			height: 3px;
		}
	}

	label {
		color: $white;
	}

	input {
		background-color: #2d2d2d;
		color: $white;

		&[type=button] {
			border:2px solid $white;
			background-color: transparent;
			padding: 10px 25px;
		}
	}

	textarea {
		background-color: #2d2d2d;
		color: $white;
	}

	.nf-field-description {
		color: $white;
	}

	.checkbox-wrap .nf-field-element {
		width: 20px
	}

	.nf-error-field-errors {
		display: none !important;
		text-align: center;
	}

	.nf-response-msg {
		text-align: center;
		color: $white;
		padding-top: 30px;
	}

	.nf-form-cont {
		max-width: 960px;
		margin: 0 auto;
	}
}


@media screen and (min-width:960px) {
	.consultation-form {
		display: block;
		position: fixed;
		top: 10%;
		right: 0;
		z-index: 110;
		max-width: 365px;
		padding:20px 0;
		min-height: 518px;

		.copy {
			padding: 0;
		}

		.bar {
			display: none;
		}

		.nf-cell {
			width: 100% !important;
		}

		.nf-field-container {
			margin-bottom: 6px;
		}

		.nf-error-msg {
			font-size: 10px;
		}
	}

	.vbar {
		position: absolute;
		bottom: 0;
		left: -40px;
		width: 40px;
		height: 100%;
		background-color: $offblack;
		border-right:1px solid $gray;
		cursor: pointer;


		.vertical {
			width: 518px;
			position: relative;
			text-align: center;
			right: -30px;
			font-size: 18px;
			transform: rotate(90deg);
			transform-origin: left top 0;
			color: #717171;

			.icon {
				width: 20px;
				vertical-align:middle;
				margin-left: 8px;
			}

		}
	}

}

